data/derived/comb/progs/unify/prog8354.ml.out
Characters 94-98:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type string but an expression was expected of type
         int -> int -> int
